table for cross-variant progress

--- a/views/home.haml
+++ b/views/home.haml
@@ -48,6 +48,8 @@
         .text_content.non_top_post
             =haml :games_played
         .text_content.non_top_post
+            =haml :cross_variant_games
+        .text_content.non_top_post
             - @ascended_combinations_sql = ascended_combinations_user_sql
             - @ascended_combinations_value = @user.id
             =haml :ascended_combinations
