--- a/views/server.haml
+++ b/views/server.haml
@@ -20,7 +20,7 @@
             - style = (count % 2) == 0 ? "cell1" : "cell2"
             - count += 1
             %tr{:id => style}
-              %td
+              %td{:id => "game-#{game.id}"}
                 - if game.user_id then
                   %a{:href => "/user_id/#{game.user_id}"}= h game.name
                 - else
