--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -179,6 +179,35 @@
 
         .text_content.non_top_post
         %h3
+          DNetHack
+        %ul.trophypage
+          %li#m-one-key
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-one-key.png"}
+            %span
+              That was the easy one: obtained at least one alignment key
+          %li#m-three-keys
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-three-keys.png"}
+            %span
+              Through the gates of Gehennom: obtained at least three alignment keys
+          %li#m-nine-keys
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-nine-keys.png"}
+            %span
+              Those were for replay value...: obtained all nine alignment keys
+          %li#m-killed-lucifer
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-killed-lucifer.png"}
+            %span
+              Round two goes to you: killed Lucifer on the Astral Plane
+          %li#m-killed-asmodeus
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-killed-asmodeus.png"}
+            %span
+              No budget for bribes: killed Asmodeus
+          %li#m-killed-demogorgon
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-killed-demogorgon.png"}
+            %span
+              Postulate Proven: killed Demogorgon, thereby proving the Lord British Postulate (if it has stats, we can kill it)
+
+        .text_content.non_top_post
+        %h3
           Nethack 1.3d
         %ul.trophypage
           %li#old-ascension
