--- a/views/clan_user_trophies.haml
+++ b/views/clan_user_trophies.haml
@@ -7,9 +7,7 @@
         / only show if there are any
         - if user_competition_trophies.size > 0 then
             - for trophy in trophies
-                - icon = (user_competition_trophies.include? trophy.trophy) ? trophy.icon : trophy.light_icon
-                %a.imagelink{:title => trophy.text, :href => "/trophies#" + trophy.anchor}
-                    %img{:src => "/icons/" + icon, :alt => trophy.text}
+                =haml :trophy, :locals => {:trophy => trophy, :achieved => (user_competition_trophies.include? trophy.trophy)}
             %br
 
         / user "All Conducts/Roles/Races/Alignments/Genders" trophies
@@ -18,15 +16,11 @@
         / only show if there are any
         - if user_all_stuff_trophies.size > 0 then
             - for trophy in trophies
-                - icon = (user_all_stuff_trophies.include? trophy.trophy) ? trophy.icon : trophy.light_icon
-                %a.imagelink{:title => trophy.text, :href => "/trophies#" + trophy.anchor}
-                    %img{:src => "/icons/" + icon, :alt => trophy.text}
+                =haml :trophy, :locals => {:trophy => trophy, :achieved => (user_all_stuff_trophies.include? trophy.trophy)}
             %br
 
         / user trophies
         - trophies = Trophy.user_trophies variant
         - user_trophies = repository.adapter.select "select trophy from scoreentries where user_id in (#{user_ids.join(',')}) and variant = ?", variant
         - for trophy in trophies
-            - icon = (user_trophies.include? trophy.trophy) ? trophy.icon : trophy.light_icon
-            %a.imagelink{:title => trophy.text, :href => "/trophies#" + trophy.anchor}
-                %img{:src => "/icons/" + icon, :alt => trophy.text}
+            =haml :trophy, :locals => {:trophy => trophy, :achieved => (user_trophies.include? trophy.trophy)}
