Updated logo image in mobile markup.

--- a/views/layout_mobile.haml
+++ b/views/layout_mobile.haml
@@ -36,7 +36,7 @@
       #topnav.navigation
         %nav.primary-nav
           %a.mobile-logo{:href => "/"}
-            %img{:alt => "", :src => "/vivid_divider.png"}/
+            %img{:alt => "", :src => "/logo.png"}/
           %ul.main
             %li.first
               - if !@logged_in then
