Changed underscores to hyphens in logo filenames

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -89,7 +89,7 @@
               %h1 NetHack Cross-Variant
             .logoimage
               %p
-                %img{:alt => "Logo", :src => "/logo_large.png"}/
+                %img{:alt => "Logo", :src => "/logo-large.png"}/
             .logotitles
               %h2 Summer Tournament
       - if !@messages.empty? then
