Removed last year's banner (banner_at2.png) and references.

--- a/views/layout_mobile.haml
+++ b/views/layout_mobile.haml
@@ -71,7 +71,7 @@
             %h1 NetHack Cross-Variant
           .logoimage
             %p
-              %img{:alt => "Logo", :src => "/banner_at2.png"}/
+              %img{:alt => "Logo", :src => "/logo-large.png"}/
           .logotitles
             %h2 Summer Tournament
       %hr
