--- a/views/splash.haml
+++ b/views/splash.haml
@@ -44,10 +44,10 @@
     %section.text_content
       %p
         You can view the results of the
-        %a{:href => "/archive/2014/index.html"} Junethack 2014,
-        %a{:href => "/archive/2013/index.html"} Junethack 2013,
-        %a{:href => "/archive/2012/index.html"} Junethack 2012, and
-        %a{:href => "/archive/2011/index.html"} Junethack 2011
+        <a href="/archive/2014/index.html">Junethack 2014</a>,
+        <a href="/archive/2013/index.html">Junethack 2013</a>,
+        <a href="/archive/2012/index.html">Junethack 2012</a>,
+        <a href="/archive/2011/index.html">Junethack 2011</a>
         tournaments.
       %p
         And the tournament rules at the 
