--- a/views/trophy_scoreboard.haml
+++ b/views/trophy_scoreboard.haml
@@ -3,7 +3,7 @@
     / This h2 should be in the branding section
     %section.text_content
       %h2
-        Player scoreboard
+        Trophy achievements
     %section#page_outline.text_content
       / ideally we would use the names already described in /servers
       - ($variants+["NH-1.3d"]).each do |variant|
