Changed other references to clan_competition other than archives.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -38,12 +38,7 @@
               - if @logged_in then
                 %a{:href => "/register"} Register
             %li
-              %a{:href => "#"} Results
-              %ul.nested
-                %li
-                  %a{:href => "/scoreboard"} Scoreboard
-                %li
-                  %a{:href => "/clan_competition"} Clan scoreboard
+              %a{:href => "/scoreboard"} Results
             %li
               %a{:href => "/activity"} Tournament stats
               %ul.nested
