Added links to new pages.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -56,6 +56,10 @@
                   %a{:href => "/ascensions"} Ascensions
                 %li
                   %a{:href => "/deaths"} Deaths
+                %li
+                  %a{:href => "/player_scoreboard"} Player scoreboard
+                %li
+                  %a{:href => "/trophy_scoreboard"} Trophy scoreboard
             %li
               %a{:href => "/about"} About
               %ul.nested
