--- a/views/trophy_scoreboard.haml
+++ b/views/trophy_scoreboard.haml
@@ -3,8 +3,10 @@
     / This h2 should be in the branding section
     %section.text_content
       %h2
-        Trophy achievements
+        Trophy scoreboard
     %section#page_outline.text_content
+      %p
+        %a{:href => "#cross-variant"} Cross-Variant
       / ideally we would use the names already described in /servers
       - ($variants+["NH-1.3d"]).each do |variant|
         - variant_name = $variants_mapping[variant]
