--- a/views/cross_variant_games.haml
+++ b/views/cross_variant_games.haml
@@ -10,7 +10,7 @@
         %th Medusa
         %th Ascended
     - count = 0
-    - $variants_mapping.each do |variant|
+    - $variants.each do |variant|
       - style = (count % 2) == 0 ? "cell1" : "cell2"
       - count += 1
       %tr{:id => style}
