--- a/views/server.haml
+++ b/views/server.haml
@@ -2,7 +2,7 @@
   .text_content_wrapper
     .text_content
       %h2
-        #{h @server.name} - a #{h @server.variant} server @ #{h @server.url}
+        #{h @server.name} - #{h @server.variant} server @ #{h @server.url}
       %h3
         Url: #{h @server.url}
       %h3
