--- a/views/trophy_scoreboard.haml
+++ b/views/trophy_scoreboard.haml
@@ -8,7 +8,7 @@
       %p
         %a{:href => "#cross-variant"} Cross-Variant
       / ideally we would use the names already described in /servers
-      - ($variants+["NH-1.3d"]).each do |variant|
+      - ($variant_order+["NH-1.3d"]).each do |variant|
         - variant_name = $variants_mapping[variant]
         %p
           %a{:href => "##{variant}"}= variant_name
@@ -26,7 +26,7 @@
                 %span
                   %a{:href => "/user/" + CGI::escape(u.user)}=h u.user
 
-    - ($variants+["NH-1.3d"]).each do |variant|
+    - ($variant_order+["NH-1.3d"]).each do |variant|
       - variant_name = $variants_mapping[variant]
       %section.text_content.trophycabinet
         %h3{:id => variant}= variant_name
