--- a/views/activity.haml
+++ b/views/activity.haml
@@ -14,7 +14,7 @@
             -# table header
             %tr
               %th Date (UTC)
-              - $variants.each do |v|
+              - $variant_order.each do |v|
                 %th= $variants_mapping[v]
 
             -# table data
@@ -26,14 +26,14 @@
                 - count += 1
                 %tr{:id => style}
                   %td.table_date= h Time.at(datum).getutc.strftime("%Y-%m-%d")
-                  - $variants.each do |v|
+                  - $variant_order.each do |v|
                     - finished_variant_games_per_day = (repository.adapter.select "select count(1) from games where user_id > 0 and version = ? and endtime >= ? and endtime < ?;", v, datum, datum+86400)[0]
                     %td.table_number= finished_variant_games_per_day
             -# Total number of tournament games per variant
             - style = (count % 2) == 0 ? "cell1" : "cell2"
             %tr{:id => style}
               %td.table_date= "Total"
-              - $variants.each do |v|
+              - $variant_order.each do |v|
                 - finished_variant_games = (repository.adapter.select "select count(1) from games where user_id > 0 and version = ?;", v)[0]
                 %td.table_number= finished_variant_games
 
