--- a/views/home.haml
+++ b/views/home.haml
@@ -38,7 +38,7 @@
                 %ul
                     - @player = @user
                     =haml :user_cross_variant_trophies
-                    - for @variant in $variants
+                    - for @variant in $variant_order
                         =haml :user_trophies
                     - @variant = "NH-1.3d"
                     =haml :user_trophies
