Add 2014 archive to menu

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -68,6 +68,8 @@
                 %li
                   %a{:href => "/trophies"} Trophies
                 %li
+                  %a{:href => "/archive/2014/index.html"} 2014 tournament
+                %li
                   %a{:href => "/archive/2013/index.html"} 2013 tournament
                 %li
                   %a{:href => "/archive/2012/index.html"} 2012 tournament
