--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -43,7 +43,7 @@
               King of the World: ascend in all variants.
 
         %p.small_print
-          "All variants" means Vanilla NetHack, UnNetHack, GruntHack, NetHack4, DNetHack, NetHack Fourk, and SlashTHEM.
+          "All variants" means Vanilla NetHack, SporkHack, UnNetHack, GruntHack, NetHack4, DNetHack, NetHack Fourk, and SlashTHEM.
           NetHack 1.3d does not contribute to the completion of these trophies.
         .text_content.non_top_post
         %h3
