--- a/views/clans.haml
+++ b/views/clans.haml
@@ -20,5 +20,5 @@
               %a{:href => "/user/" + clan.get_admin.login}
                 #{h clan.get_admin.login}
             %td
-              #{h clan.accounts.users.uniq.length}
+              #{h clan.users.uniq.length}
     %span#end_of_content_spacer.clear
