new dNetHack trophies

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -193,18 +193,18 @@
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-nine-keys.png"}
             %span
               Those were for replay value...: obtained all nine alignment keys
-          %li#m-killed-lucifer
-            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-killed-lucifer.png"}
+          %li#m-dn-king
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-dn-king.png"}
             %span
-              Round two goes to you: killed Lucifer on the Astral Plane
-          %li#m-killed-asmodeus
-            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-killed-asmodeus.png"}
+              King of dNethack: Ascend a game with all the new races/roles in dNethack. 
+          %li#m-dn-prince
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-dn-prince.png"}
             %span
-              No budget for bribes: killed Asmodeus
-          %li#m-killed-demogorgon
-            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-killed-demogorgon.png"}
+              Prince of dNethack: Ascend a game with half the new races/roles in dNethack. 
+          %li#m-dn-tour
+            %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-dn-tour.png"}
             %span
-              Postulate Proven: killed Demogorgon, thereby proving the Lord British Postulate (if it has stats, we can kill it)
+              dNethack Tour: Played a game (at least 1000 turns) with all the shiny new races/roles in dNethack. 
 
         .text_content.non_top_post
         %h3
