--- a/views/login.haml
+++ b/views/login.haml
@@ -9,7 +9,7 @@
         %fieldset
           #username_row
             %label{:for => "username"} Username:
-            %input#username{:name => "username", :type => "textbox", :value => "", :autofocus => "", :placeholder => "username"}/
+            %input#username{:name => "username", :type => "text", :value => "", :autofocus => "", :placeholder => "username"}/
             .form_msg
               Field required
             %span.clear
