--- a/views/player_scoreboard.haml
+++ b/views/player_scoreboard.haml
@@ -13,7 +13,7 @@
       - variant_name = $variants_mapping[variant]
       %section.text_content
         %h3{:id => variant}= variant_name
-        - if (CompetitionScoreEntry.count :variant => @variant) == 0
+        - if (CompetitionScoreEntry.count :variant => variant) == 0
           %div
             No ascensions yet
         - else
@@ -25,7 +25,7 @@
                   %th.competition_value
                   %th.competition_placing Placing
                 / only show the first 3 places
-                - c = CompetitionScoreEntry.all :variant => @variant, :trophy => $trophies[i], :order => [ :rank.asc ], :conditions => [ 'rank <= 3' ]
+                - c = CompetitionScoreEntry.all :variant => variant, :trophy => $trophies[i], :order => [ :rank.asc ], :conditions => [ 'rank <= 3' ]
                 - for j in 0..c.size-1 do
                   - style = (j % 2) == 0 ? "cell1" : "cell2"
                   %tr{:id => style}
