--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -171,7 +171,7 @@
           %li#heaven-or-hell
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/heaven-or-hell.png"}
             %span
-              Heaven or Hell: ascend in "Heaven or Hell" mode (monsters and player only have 1 HP) (Acehack and UnNetHack only)
+              Heaven or Hell: ascend in "Heaven or Hell" mode (monsters and player only have 1 HP) (UnNetHack only)
           %li#m-mini-croesus
             %img{:style => "vertical-align:middle", :alt => "", :src => "/icons/m-mini-croesus.png"}
             %span
