--- a/views/splash.haml
+++ b/views/splash.haml
@@ -44,6 +44,7 @@
     %section.text_content
       %p
         You can view the results of the
+        <a href="/archive/2015/index.html">Junethack 2015</a>,
         <a href="/archive/2014/index.html">Junethack 2014</a>,
         <a href="/archive/2013/index.html">Junethack 2013</a>,
         <a href="/archive/2012/index.html">Junethack 2012</a>,
