Rename users to players (reported by Mandevil)

--- a/views/activity.haml
+++ b/views/activity.haml
@@ -104,7 +104,7 @@
       - @days = (signupstarttime..endtime).collect {|d| d.to_s}
 
       .text_content.non_top_post
-        %h2 New Users per Day
+        %h2 New Players per Day
         .scorelisting
           %table.greytable.misc
             %tr
