--- a/views/layout.haml
+++ b/views/layout.haml
@@ -47,7 +47,7 @@
                 %li
                   %a{:href => "/clans"} Clans
                 %li
-                  %a{:href => "/users"} Users
+                  %a{:href => "/users"} Players
                 %li
                   %a{:href => "/games"} Games
                 %li
