--- a/views/layout_mobile.haml
+++ b/views/layout_mobile.haml
@@ -53,7 +53,7 @@
                 %li
                   %a{:href => "/deaths"} Deaths
             %li
-              %a{:href => "/users"} Users
+              %a{:href => "/users"} Players
             %li.shorter1.parent
               %a{:href => "/clans"} Clans
             %li
