--- a/views/layout.haml
+++ b/views/layout.haml
@@ -68,6 +68,8 @@
                 %li
                   %a{:href => "/trophies"} Trophies
                 %li
+                  %a{:href => "/archive/2016/index.html"} 2016 tournament
+                %li
                   %a{:href => "/archive/2015/index.html"} 2015 tournament
                 %li
                   %a{:href => "/archive/2014/index.html"} 2014 tournament
