--- a/views/home.haml
+++ b/views/home.haml
@@ -7,7 +7,7 @@
             - server_accounts = (Server.all - @user.servers)
             - if server_accounts.size > 0
                 #greeting
-                    = "Hi #{h @user.login}!  To have your games on one of the <a href='/servers'>supported public servers</a> ranked in the tournament, add the following line<br/><tt># #{h @tournament_identifier}</tt><br/> to your options file on the public server (On nethack.dank.ninja/ascension.run, use the \"NetHack 3.4.3\" nethackrc for all hosted variants there. On nethack4.org, set the interface option \"comment\") and enter your public server account name (case-sensitive) into the form below."
+                    = "Hi #{h @user.login}!  To have your games on one of the <a href='/servers'>supported public servers</a> ranked in the tournament, add the following line<br/><tt># #{h @tournament_identifier}</tt><br/> to your options file on the public server (On ascension.run, use the \"NetHack 3.4.3\" nethackrc for all hosted variants there. On nethack4.org, set the interface option \"comment\") and enter your public server account name (case-sensitive) into the form below."
             %table.greytable
                 %tr
                     %th Server
@@ -24,12 +24,12 @@
             - if server_accounts.size > 0
                 %h3
                     Add an account to your name
-                %form#add_server_form.smallform{ :action => "/add_server_account", :method => "post"}
-                    %select{:name => "server"}
+                %form#add_server_form.smallform{ action: "/add_server_account", method: "post"}
+                    %select{ name: "server"}
                         - server_accounts.each do |s|
                             %option{:value => s.id}= s.display_name
-                    %input{:type => "text", :name => "user", :placeholder => "public server username", :style => "width: 22ex;"}
-                    %input{:type => "submit", :value => "add account"}
+                    %input{ type: "text", name: "user", placeholder: "public server username", style: "width: 22ex;", autofocus: ""}
+                    %input{ type: "submit", value: "add account"}
                     %span.clear
         %section.text_content.non_top_post
             .trophycabinet.text_cabinet
