--- a/views/home.haml
+++ b/views/home.haml
@@ -7,7 +7,13 @@
             - server_accounts = (Server.all - @user.servers)
             - if server_accounts.size > 0
                 #greeting
-                    = "Hi #{h @user.login}!  To have your games on one of the <a href='/servers'>supported public servers</a> ranked in the tournament, add the following line<br/><tt># #{h @tournament_identifier}</tt><br/> to your options file on the public server (On ascension.run, use the \"NetHack 3.4.3\" nethackrc for all hosted variants there. On nethack4.org, set the interface option \"comment\") and enter your public server account name (case-sensitive) into the form below."
+                    = "Hi #{h @user.login}!  To have your games on one of the <a href='/servers'>supported public servers</a> ranked in the tournament, add the following line<br/><tt># #{h @tournament_identifier}</tt><br/> to your options file on the public server."
+                %ul
+                    %li= "On nethack.alt.org, use the \"NetHack 3.4.3\" nethackrc for all hosted variants there."
+                    %li= "On nethack4.org, set the interface option \"comment\") and enter your public server account name (case-sensitive) into the form below."
+                    %li= "On ascension.run, use the \"NetHack 3.4.3\" nethackrc."
+                    %li= "On em.slashem.me, use the \"NetHack 3.6.0\" nethackrc."
+                    %li= "On hardfought.org, use the \"NetHack 3.4.3\" nethackrc."
             %table.greytable
                 %tr
                     %th Server
