More nicely formatted numbers in HTML

--- a/views/games_played.haml
+++ b/views/games_played.haml
@@ -25,7 +25,7 @@
         %td.variant{"data-title" => "Name"}= h game.variant_name
         %td.table_character{"data-title" => "Character"}= h [game.role, game.race, game.gender, game.align].join('-')
         %td{"data-title" => "Server"}= h game.server.hostname
-        %td.table_number{"data-title" => "Points"}= game.points
+        %td.table_number{"data-title" => "Points"}= game.points.html_formatted
         %td{"data-title" => "Killer"}= h game.death
         %td.dllink
           -# link to the dumplog of the game if possible
