--- a/views/_clan_trophies.haml
+++ b/views/_clan_trophies.haml
@@ -16,6 +16,6 @@
           %a{:href => "/clan/#{CGI::escape entry.clan.name}"}
             #{h entry.clan.name}
         %td.table_number
-          #{h entry.points}
+          #{h entry.points.html_formatted}
         %td.table_number
           #{h entry.rank}
