--- a/views/clan_competition_trophy.haml
+++ b/views/clan_competition_trophy.haml
@@ -21,8 +21,8 @@
           %a{:href => "/clan/#{CGI::escape entry.clan.name}"}
             #{h entry.clan.name}
         %td.table_number
-          #{h entry.value}
+          #{h entry.value.html_formatted}
         %td.table_number
-          #{h entry.points}
+          #{h entry.points.html_formatted}
         %td.table_number
           #{h entry.rank}
